<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MensagemActivity">

    <TextView
            android:text="@string/nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_gravity="center"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/checkBox2"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/checkBox2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox2" app:layout_constraintStart_toStartOf="@+id/editText7"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/editText8" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <CheckBox
            android:text="@string/spam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBox2" android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="@+id/editText7"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText7"/>
    <TextView
            android:text="@string/mensagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@+id/editText2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/editText2"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText7" android:layout_weight="5"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/obs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/editText8" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText8"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText8" android:layout_weight="2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
    />
    <Button
            android:text="@string/enviar"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/button" android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="129dp"
            android:layout_marginRight="129dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>